increase font weight to avoid color contrast a11y error

--- a/_includes/css/footer.css
+++ b/_includes/css/footer.css
@@ -12,6 +12,7 @@
   font-size: .875rem;
   line-height: 2;
   margin-bottom: 0;
+  font-weight: 700;
 }
 
 .footer_back_to_top,
